# svd-py

./: LICENSE  setup.cfg  setup.py
svd/: __init__.py  __main__.py  access.py  address_block.py  cpu.py  device.py  field.py  interrupt.py  parser.py  peripheral.py  protection.py  register.py  sau.py  version.py
