[metadata]
name = svd
author = Kalyan Sriram
author_email = kalyan@coderkalyan.com
url = 
download_url = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords = 
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
packages=find:
install_requires=

[options.entry_points]
console_scripts =
    executable-name = svd:main